# bons

./: AUTHENTICATION_SUMMARY.md  COMPLETE_AUTHENTICATION_GUIDE.md  DATABASE_INTEGRATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  FRONTEND_AUTH_GUIDE.md  GETTING_STARTED.md  INDEX.md  PROJECT_COMPLETE.md  PROJECT_SPECIFICATION.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  package-lock.json  render.yaml
Backendtodo/: .gitignore
Backendtodo/backend/: .gitignore  DATABASE.md  Dockerfile  main.py
Backendtodo/backend/app/: database.py  main.py
Backendtodo/backend/app/cron/: scheduler.py
Backendtodo/backend/app/models/: schemas.py
Backendtodo/backend/app/routes/: tasks.py
Backendtodo/backend/app/utils/: email.py
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: database.py
backend/app/routes/: auth.py
backend/app/utils/: auth.py
frontend/: README.md  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/verify-email/: page.tsx
frontend/components/: LoginForm.tsx  RegisterForm.tsx  TaskForm.tsx  TaskList.tsx
frontend/lib/: api-client.ts  auth-context.tsx
frontend/lib/services/: auth-service.ts  task-service.ts
frontend/types/: api.ts
